--- a/bolag.css
+++ b/bolag.css
@@ -1,7 +1,11 @@
 body{
-    background-color: rgb(150, 190, 228);
+    background-color: rgb(255, 255, 255);
     font-family: 'Open Sans', sans-serif;
+    padding: 0px;
+    margin: 0px;
 }
+
+/* typografi */
 
 h2{
     font-weight: 100;
@@ -15,7 +19,21 @@ h3{
     color: white;
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
+    letter-spacing: 1px;
+    margin: 0px;
+    margin-top: -5px;
 }
+
+.resmal_info{
+    font-size: 0.9em;
+    line-height: 1.5em;
+}
+
+.footerbox h3{
+    background: none;
+}
+
+/*layout och struktur */
 
 .wrapper{
     width: 90%;
@@ -36,7 +54,7 @@ header{
 }
 
 .logo img{
-    width: 200px;
+    width: 130px;
 }
 
 .meny{
@@ -60,11 +78,39 @@ header{
 }
 
 .resmal{
-    width: 30%
+    width: 30%;
+    float: left;
+    margin-right: 1%;
 }
 
 .resmal img{
-    width: 100%
+    width: 100%;
+    height: 200px;
+}
+
+footer{
+    background-image: url(https://images.bonnier.cloud/files/ill/production/2019/07/10091229/ill_hvorfor_er_himlen_blacc8a.png?auto=compress&fit=crop&min-w=600&min-h=315&max-w=1200&max-h=630);
+    width: 100%;
+    height: 600px;
+    background-repeat: no-repeat;
+    background-color: rgb(55, 109, 224);
+    background-size: 100%;
+    padding-top: 130px;
+}
+
+.inner_footer{
+    width: 960px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footerbox{
+    width: 30%;
+    margin-left: 1%;
+    height: 300px;
+    float: left;
+    
 }
 
 ul{
@@ -93,4 +139,3 @@ a:hover{
     background: rgb(74, 120, 189);
     color: white;
 }
-
